set up profile and friend

--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
     <title>Likes</title>
 </head>
 <body>
-    
 
+    <div class="container">
+
+        <div class="main-box">
+            <div class="profile">
+                <img id="profile-pic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEBYCh9OB7ll9yMD-kkod4bDfdqdbuS1D7ny3Wh4E9YamwBJcNEm5sBH1wErx-fuuOGgM&usqp=CAU" alt="profile pic">
+
+                <a href=""><h3>Add an avatar</h3></a>
+                    
+                <h2>James Doe</h2>
+            </div>
+
+            <div class="col-2">
+                <div class="user-box">
+                    <div class="topbar">
+                        <h2>Some User</h2>
+                        <div class="topbar-right">
+                            <p id="like">3 likes</p>
+                            <button id="like-btn">Like</button>
+                        </div>
+                    </div>
+                    <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
