--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="topbar">
                         <h2>Some User</h2>
                         <div class="topbar-right">
-                            <p id="like">3 likes</p>
+                            <p id="like">3 like(s)</p>
                             <button id="like-btn">Like</button>
                         </div>
                     </div>
