finish html and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Likes</title>
 </head>
 <body>
-
+    <div class="nav">
+        <h1>Network</h1>
+    </div>
+       <h1 id="title">Your Feed</h1>
     <div class="container">
 
         <div class="main-box">
@@ -23,9 +26,31 @@
             <div class="col-2">
                 <div class="user-box">
                     <div class="topbar">
-                        <h2>Some User</h2>
+                        <h2>Neil M</h2>
                         <div class="topbar-right">
                             <p id="like">3 like(s)</p>
+                            <button id="like-btn">Like</button>
+                        </div>
+                    </div>
+                    <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
+                </div>
+
+                <div class="user-box">
+                    <div class="topbar">
+                        <h2>Nichole K</h2>
+                        <div class="topbar-right">
+                            <p id="like">12 like(s)</p>
+                            <button id="like-btn">Like</button>
+                        </div>
+                    </div>
+                    <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
+                </div>
+
+                <div class="user-box">
+                    <div class="topbar">
+                        <h2>Jim R</h2>
+                        <div class="topbar-right">
+                            <p id="like">9 like(s)</p>
                             <button id="like-btn">Like</button>
                         </div>
                     </div>
