--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="topbar">
                         <h2>Neil M</h2>
                         <div class="topbar-right">
-                            <p id="like">3 like(s)</p>
+                            <p id="like"> <span id="num">3</span> like(s)</p>
                             <button id="like-btn">Like</button>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                             <button id="like-btn">Like</button>
                         </div>
                     </div>
-                    <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
+                    <h3 id="about">Just finished my <a href="">next comic</a>, check it out</h3> 
                 </div>
 
                 <div class="user-box">
@@ -54,7 +54,7 @@
                             <button id="like-btn">Like</button>
                         </div>
                     </div>
-                    <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
+                    <h3 id="about">I can't stop listening to the <a href="">new album</a> Who else is liking it?</h3> 
                 </div>
             </div>
         </div>
