--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <div class="topbar">
                         <h2>Neil M</h2>
                         <div class="topbar-right">
-                            <p id="like"> <span id="num">3</span> like(s)</p>
-                            <button id="like-btn">Like</button>
+                            <button id="like-btn" onclick="increase(this)">Like</button>
+                            <p id="like" value="0"><span id="num">1</span> like(s)</p>
+                            
                         </div>
                     </div>
                     <h3 id="about">I just set up this new discord bot, let me know what you all think. <a href="">link</a></h3> 
@@ -39,8 +40,8 @@
                     <div class="topbar">
                         <h2>Nichole K</h2>
                         <div class="topbar-right">
-                            <p id="like">12 like(s)</p>
-                            <button id="like-btn">Like</button>
+                            <button id="like-btn" onclick="increase(this)">Like</button>
+                            <p id="like"><span id="num">1</span> like(s)</p>
                         </div>
                     </div>
                     <h3 id="about">Just finished my <a href="">next comic</a>, check it out</h3> 
@@ -50,8 +51,8 @@
                     <div class="topbar">
                         <h2>Jim R</h2>
                         <div class="topbar-right">
-                            <p id="like">9 like(s)</p>
-                            <button id="like-btn">Like</button>
+                            <button id="like-btn" onclick="increase(this)">Like</button>
+                            <p id="like"><span id="num">1</span> like(s)</p>
                         </div>
                     </div>
                     <h3 id="about">I can't stop listening to the <a href="">new album</a> Who else is liking it?</h3> 
